// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow rendering React Test Instance 1`] = `
<Text
  testID="text-button"
>
  Press me
</Text>
`;

exports[`shallow rendering React elements 1`] = `
<View
  testID="2"
>
  <Text
    testID="text-button"
  >
    Press me
  </Text>
</View>
`;
